[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "billing_analytics_pipeline"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.dagster]
module_name = "billing_analytics_pipeline.definitions"
code_location_name = "billing_analytics_pipeline"